// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseApiResponse 1`] = `
Object {
  "amount": 5.768,
  "id": "1524805049034",
  "price": 655.2,
  "source": "KRAKEN",
  "timestamp": 1524805049034,
}
`;

exports[`parseTrade 1`] = `
Object {
  "amount": 1,
  "id": "1524740175400",
  "price": 630.44,
  "source": "KRAKEN",
  "timestamp": 1524740175400,
}
`;

exports[`parseTrade 2`] = `
Object {
  "amount": 1.733,
  "id": "1524740175408",
  "price": 630.43,
  "source": "KRAKEN",
  "timestamp": 1524740175408,
}
`;

exports[`parseTrade 3`] = `
Object {
  "amount": 0.13274374,
  "id": "1524740175412",
  "price": 630.24,
  "source": "KRAKEN",
  "timestamp": 1524740175412,
}
`;

exports[`parseTrade 4`] = `
Object {
  "amount": 0.02583083,
  "id": "1524740181690",
  "price": 629.99,
  "source": "KRAKEN",
  "timestamp": 1524740181690,
}
`;

exports[`parseTrade 5`] = `
Object {
  "amount": 0.34977855,
  "id": "1524740181697",
  "price": 630,
  "source": "KRAKEN",
  "timestamp": 1524740181697,
}
`;

exports[`parseTrade 6`] = `
Object {
  "amount": 3.62439062,
  "id": "1524740181701",
  "price": 630,
  "source": "KRAKEN",
  "timestamp": 1524740181701,
}
`;
